src/App.css
body {
  background-color: #F3F6FF;
}
.App {
  text-align: center;
}

.App-main {
  padding: 20px;
  padding-bottom: 50px;
}

.App-header {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-bottom: 30px;
}

.refraim-prompt {
  padding-bottom: 20px;
  display: flex;
  justify-content: center;
  gap: 7px;
  text-align: left;
}

.convo-text {
  text-align: left;
}

.convo-text1 {
  text-align: left;
  padding-top: 10px;
}

.history-section {
  padding-bottom: 30px;
}

.history {
  padding-top: 20px
}

.validating, .validated {
  padding-bottom: 60px
}

.like-button {
text-align: right;
}

.brain-icon {
  height: 40px;
  width: 40px;
  /* float: right; */
}

.brain-icon-left {
  height: 40px;
  width: 40px;
  float: left;
}

.brain-icon-right {
  height: 40px;
  width: 40px;
  float: right;
}

.large-brain{
  margin-top: 50px;
  margin-bottom: 60px;
}

.icon-dash {
  display: flex;
  align-items: center;
  padding-top: 10px;
}

.dash {
  width: 80%
}

.complete-button {
  margin-bottom: 100px;
}

.validation-buttons, .yes-no-buttons {
  display: flex;
  gap: 10px;
  justify-content: center;
}


.dots {
  display: flex;
  justify-content: center
}

.dot {
  height: 10px;
  width: 10px;
  margin: 5px;
  background-color: #bbb;
  border-radius: 50%;
  /* display: inline-block; */
}

.filled {
  background-color: #FFCA3B;
}

@media only screen and (max-width: 480px) {
  .yes-no-buttons {
      display: none;
  }
}

